objects/L2O_Stage_Metric__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Stage Metrics</relationshipLabel>
        <relationshipName>Stage_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Days__c</fullName>
        <formula>FLOOR(Business_Hours__c/8) +

IF(MOD(Business_Hours__c/8, 1) &lt; 0.25, 0,

IF(MOD(Business_Hours__c/8, 1) &lt; 0.75, 0.5, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Business Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Current_Days_in_Stage__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <label>Current Days in Stage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Current_Stage_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2O_From_Stage_Date__c</fullName>
        <label>From Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2O_From_Stage__c</fullName>
        <label>From Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Opportunity_Stage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Number_of_Days__c</fullName>
        <formula>CreatedDate - L2O_From_Stage_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration(Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Number_of_Hours__c</fullName>
        <formula>(CreatedDate - L2O_From_Stage_Date__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration(Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Stage Metrics</relationshipLabel>
        <relationshipName>Stage_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_To_Stage__c</fullName>
        <label>To Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Opportunity_Stage</valueSetName>
        </valueSet>
    </fields>
    <label>Stage Metric</label>
    <nameField>
        <displayFormat>SM-{00000}</displayFormat>
        <label>Stage Metric Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Metrics</pluralLabel>
    <recordTypes>
        <fullName>Agreement</fullName>
        <active>true</active>
        <description>This record type used for Stage Metrics adaptation for Agreements</description>
        <label>Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity</fullName>
        <active>true</active>
        <description>Opportunity Record Type used for Opportunity stage metrics</description>
        <label>Opportunity</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>